# serializer version: 1
# name: test_connect_and_generation
  '''
  # --- This is auto-generated code (DO NOT EDIT) ---
  import asyncio
  from collections.abc import AsyncIterator
  from typing import Annotated, NotRequired, TypedDict, Unpack
  
  from langchain_core.tools import BaseTool
  from mcp import ClientSession
  from pydantic import BaseModel, Field
  
  from mcp_static_toolgen.runtime.common import create_model_from_typeddict
  from mcp_static_toolgen.runtime.langchain import dump_safe_result, parse_result
  
  
  class ReadFileInputDict(TypedDict):
      path: str
      """
      Path to the file
      """
  
  
  class ReadFileOutput(BaseModel):
      content: Annotated[str, Field(title="Content")]
      """
      Content of the file
      """
  
  
  class ReadFileTool(BaseTool):
      name: str = "read_file"
      description: str = "Read the complete contents of a file."
      args_schema = create_model_from_typeddict("ReadFileInput", ReadFileInputDict)
      mcp_client_sessions: AsyncIterator[ClientSession] = Field(exclude=True)
  
      def _run(
          self,
          **kwargs: Unpack[ReadFileInputDict],
      ) -> ReadFileOutput:
          return asyncio.run(self._arun(**kwargs))
  
      async def _arun(
          self,
          **kwargs: Unpack[ReadFileInputDict],
      ) -> ReadFileOutput:
          # remove None values
          stripped_kwargs = {
              k: v
              for k, v in kwargs.items()
              if v is not None  # pyright: ignore [reportUnnecessaryComparison]
          }
          session = await self.mcp_client_sessions.__anext__()
          result = await session.call_tool("read_file", stripped_kwargs)
  
          if result.isError:
              error_msg = dump_safe_result(result)
              raise RuntimeError(f"Tool execution failed: {error_msg}")
          return parse_result(ReadFileOutput, result)
  
  
  class WriteFileInputDict(TypedDict):
      path: str
      """
      Path to the file
      """
      content: str
      """
      Content to write
      """
      append: NotRequired[bool | None]
      """
      If true, append instead of overwrite
      """
  
  
  class WriteFileOutput(BaseModel):
      result: Annotated[str, Field(title="Result")]
  
  
  class WriteFileTool(BaseTool):
      name: str = "write_file"
      description: str = "Write content to a file."
      args_schema = create_model_from_typeddict("WriteFileInput", WriteFileInputDict)
      mcp_client_sessions: AsyncIterator[ClientSession] = Field(exclude=True)
  
      def _run(
          self,
          **kwargs: Unpack[WriteFileInputDict],
      ) -> WriteFileOutput:
          return asyncio.run(self._arun(**kwargs))
  
      async def _arun(
          self,
          **kwargs: Unpack[WriteFileInputDict],
      ) -> WriteFileOutput:
          # remove None values
          stripped_kwargs = {
              k: v
              for k, v in kwargs.items()
              if v is not None  # pyright: ignore [reportUnnecessaryComparison]
          }
          session = await self.mcp_client_sessions.__anext__()
          result = await session.call_tool("write_file", stripped_kwargs)
  
          if result.isError:
              error_msg = dump_safe_result(result)
              raise RuntimeError(f"Tool execution failed: {error_msg}")
          return parse_result(WriteFileOutput, result)
  
  
  # --- Factory & TypedDict ---
  class Tools(TypedDict):
      read_file: ReadFileTool
      write_file: WriteFileTool
  
  
  def get_mcp_tools(mcp_client_sessions: AsyncIterator[ClientSession]) -> Tools:
      return {
          "read_file": ReadFileTool(mcp_client_sessions=mcp_client_sessions),
          "write_file": WriteFileTool(mcp_client_sessions=mcp_client_sessions),
      }
  
  '''
# ---
# name: test_generation_from_mock_tools
  dict({
    'generated_code': '''
      # --- This is auto-generated code (DO NOT EDIT) ---
      import asyncio
      from collections.abc import AsyncIterator
      from typing import NotRequired, TypedDict, Unpack
      
      from langchain_core.tools import BaseTool
      from mcp import ClientSession
      from pydantic import BaseModel, Field
      
      from mcp_static_toolgen.runtime.common import create_model_from_typeddict
      from mcp_static_toolgen.runtime.langchain import dump_safe_result, parse_result
      
      
      class ReadFileInputDict(TypedDict):
          path: str
          """
          Path to the file
          """
      
      
      class ReadFileOutput(BaseModel):
          content: str
          """
          Content of the file
          """
      
      
      class ReadFileTool(BaseTool):
          name: str = "read_file"
          description: str = "Read the complete contents of a file."
          args_schema = create_model_from_typeddict("ReadFileInput", ReadFileInputDict)
          mcp_client_sessions: AsyncIterator[ClientSession] = Field(exclude=True)
      
          def _run(
              self,
              **kwargs: Unpack[ReadFileInputDict],
          ) -> ReadFileOutput:
              return asyncio.run(self._arun(**kwargs))
      
          async def _arun(
              self,
              **kwargs: Unpack[ReadFileInputDict],
          ) -> ReadFileOutput:
              # remove None values
              stripped_kwargs = {
                  k: v
                  for k, v in kwargs.items()
                  if v is not None  # pyright: ignore [reportUnnecessaryComparison]
              }
              session = await self.mcp_client_sessions.__anext__()
              result = await session.call_tool("read_file", stripped_kwargs)
      
              if result.isError:
                  error_msg = dump_safe_result(result)
                  raise RuntimeError(f"Tool execution failed: {error_msg}")
              return parse_result(ReadFileOutput, result)
      
      
      class WriteFileInputDict(TypedDict):
          path: str
          """
          Path to the file
          """
          content: str
          """
          Content to write
          """
          append: NotRequired[bool]
          """
          If true, append instead of overwrite
          """
      
      
      class WriteFileTool(BaseTool):
          name: str = "write_file"
          description: str = "Write content to a file."
          args_schema = create_model_from_typeddict("WriteFileInput", WriteFileInputDict)
          mcp_client_sessions: AsyncIterator[ClientSession] = Field(exclude=True)
      
          def _run(
              self,
              **kwargs: Unpack[WriteFileInputDict],
          ) -> str:
              return asyncio.run(self._arun(**kwargs))
      
          async def _arun(
              self,
              **kwargs: Unpack[WriteFileInputDict],
          ) -> str:
              # remove None values
              stripped_kwargs = {
                  k: v
                  for k, v in kwargs.items()
                  if v is not None  # pyright: ignore [reportUnnecessaryComparison]
              }
              session = await self.mcp_client_sessions.__anext__()
              result = await session.call_tool("write_file", stripped_kwargs)
      
              if result.isError:
                  error_msg = dump_safe_result(result)
                  raise RuntimeError(f"Tool execution failed: {error_msg}")
              return dump_safe_result(result)
      
      
      # --- Factory & TypedDict ---
      class Tools(TypedDict):
          read_file: ReadFileTool
          write_file: WriteFileTool
      
      
      def get_mcp_tools(mcp_client_sessions: AsyncIterator[ClientSession]) -> Tools:
          return {
              "read_file": ReadFileTool(mcp_client_sessions=mcp_client_sessions),
              "write_file": WriteFileTool(mcp_client_sessions=mcp_client_sessions),
          }
  
    ''',
    'parsed_tools': list([
      ParsedMCPTool(name='read_file', class_name='ReadFile', description='Read the complete contents of a file.', input_schema_dict=' \n\nfrom typing import TypedDict\n\n\nclass ReadFileInputDict(TypedDict):\n    path: str\n    """\n    Path to the file\n    """', output_schema_model=' \n\nfrom pydantic import BaseModel\n\n\nclass ReadFileOutput(BaseModel):\n    content: str\n    """\n    Content of the file\n    """'),
      ParsedMCPTool(name='write_file', class_name='WriteFile', description='Write content to a file.', input_schema_dict=' \n\nfrom typing import NotRequired, TypedDict\n\n\nclass WriteFileInputDict(TypedDict):\n    path: str\n    """\n    Path to the file\n    """\n    content: str\n    """\n    Content to write\n    """\n    append: NotRequired[bool]\n    """\n    If true, append instead of overwrite\n    """', output_schema_model=None),
    ]),
  })
# ---
